- Fixed bug #50285 (xmlrpc does not preserve keys in encoded indexed arrays)